--- a/2.2.2. spring_mvc/pom.xml
+++ b/2.2.2. spring_mvc/pom.xml
@@ -36,6 +36,12 @@
             <version>3.0.9.RELEASE</version>
         </dependency>
 
+        <dependency>
+            <groupId>javax.annotation</groupId>
+            <artifactId>javax.annotation-api</artifactId>
+            <version>1.3.2</version>
+        </dependency>
+
     </dependencies>
 
     <build>
